CBL-3884: Rewrite ReplicatorPendingDocIdTest to avoid using deprecated API methods